--- a/src/components/NavBar/nav.css
+++ b/src/components/NavBar/nav.css
@@ -1,88 +1,195 @@
-.header-container {
-  /* border: 1px solid red; */
-  width: 100%;
-  height: 82px;
-  display: grid;
-  place-items: center;
-  position: sticky;
-  top: 5px;
-}
 
+.header {
+  max-width: 1264px;
+  height: 620px;
+  border: 1px solid red;
+  background-image: url("../../images/banner-bg.png");
+  background-attachment: fixed;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 100%;
+  /* position: fixed; */
+}
 .container {
-  /* max-width: 1200px; */
-  /* border: 2px solid yellow; */
-  width: 95%;
-  height: 52px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.container .logo {
-  width: 9.5rem;
-  height: 2.5rem;
-}
-.container .logo img {
+  max-width: 1120px;
   width: 100%;
-  height: 100%;
+  height: 62px;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: #2b2a29;
+  clip-path: polygon(0 0, 100% 0, 96% 100%, 3% 100%);
 }
-.nav-contaienr {
-  display: flex;
-  align-items: center;
-  /* width: 46%; */
-  justify-content: space-between;
-  /* border: 1px solid green; */
-  gap: 2rem;
-}
-/* .nav-item {
+.header_section_top {
+  height: 4.2rem;
   width: 100%;
-} */
-
-.nav-contaienr .nav-item ul {
-  display: flex;
-  align-items: center;
-  margin-bottom: 0;
-  gap: 1.5rem;
-  text-transform: uppercase;
+  background-color: #2b2a29;
 }
-
-.cart {
-    position: relative;
-  display: flex;
-  /* align-items: center; */
-  gap: 1rem;
-  /* border: 1px solid black; */
-}
-
-.search-container {
-  width: 30%;
-  height: 35px;
-}
-.search-container input {
-  width: 100%;
-  height: 100%;
-  padding: 0 1rem;
-}
-.nav-contaienr .cart .cart-icon span {
-  position: relative;
-}
-.nav-contaienr .cart .cart-icon span::after {
-  content: attr(value);
-  background-color: #2f9ee2;
-  position: absolute;
-  font-family: "Work Sans", sans-serif;
-  font-style: normal;
-  top: -10px;
-  right: -12px;
-  font-weight: bold;
-  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.3);
-  font-size: 11px;
-  padding-left: 0px;
-  padding-right: 2px;
-  line-height: 17px;
-  letter-spacing: -0.5px;
-  height: 18px;
-  min-width: 18px;
-  border-radius: 99px;
+.custom_menu {
+  margin: 0 auto;
   text-align: center;
-  z-index: 3;
+  width: 100%;
+  height: 100%;
+
+  & ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #f1f1f1;
+    height: 100%;
+    text-transform: capitalize;
+    font-family: "Poppins, sans-serif";
+    font-size: 1.7rem;
+    gap: 2rem;
+    font-weight: 500;
+  }
+  & ul li:hover {
+    color: #f26522;
+  }
+}
+.logo {
+  max-width: 1264px;
+  width: 100%;
+  height: 99px;
+  padding: 0 1.5rem;
+
+  & .logo_container {
+    margin: 0 auto;
+    max-width: 1110px;
+    width: 100%;
+    height: 9.9rem;
+    display: grid;
+    place-items: center;
+  }
+}
+.header_section {
+  width: 100%;
+  height: 38px;
+  .containt_container {
+    max-width: 1100px;
+    width: 95%;
+    height: 100%;
+    margin: 0 auto;
+
+    .containt_main {
+      padding: 0 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+
+
+      .menu-icon {
+        width: 3.8rem;
+        height: 3.8rem;
+      }
+      .dropdown {
+        width: 140px;
+        height: 38px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 0.3rem;
+        background-color: #30302e;
+        color: #ffffff;
+        padding: 0 1.2rem;
+        text-transform: capitalize;
+        font-size: 1.5rem;
+        & button {
+          outline: none;
+        }
+        & img {
+          background-color: white;
+        }
+      }
+
+      .search {
+        flex-basis: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* border-radius: .5rem; */
+
+        & input {
+          width: 100%;
+          height: 38px;
+          border-radius: 0.5rem 0rem 0rem 0.5rem;
+          outline: none;
+          border: none;
+        }
+        & button {
+          width: 4rem;
+          height: 3.8rem;
+          padding: 0.6rem 1.2rem;
+          border: none;
+          border-radius: 0rem 0.4rem 0.4rem 0rem;
+        }
+      }
+
+      .header_box {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        .cart {
+          font-size: 2rem;
+          text-transform: capitalize;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 2rem;
+          & img {
+            width: 2.8rem;
+            height: 2.8rem;
+          }
+        }
+
+        .login {
+          font-size: 2rem;
+          text-transform: capitalize;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 2rem;
+          & img {
+            width: 2.8rem;
+            height: 2.8rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    background-size: cover;
+  }
+
+  .container {
+    display: none;
+  }
+ .menu-icon{
+  order: 1;
+ }
+ .containt_main{
+  /* flex-direction: column; */
+  border: 1px solid red;
+  gap: 3rem;
+ }
+  .category_dropdown {
+    display: none;
+    }
+    .header_box{
+      order: 0;
+      width: 100%;
+    }
+    .search{
+      border: 1px solid red;
+min-width: 70%;
+      width: 100%;
+      order: 2;
+      & input{
+        width: 100%;
+      }
+    }
 }
