--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,32 +1,35 @@
 body {
   position: relative;
 
-  height: 10000px;
+  /* height: 10000px; */
 }
 html {
   font-size: 62.5%;
 }
 .header {
   max-width: 1264px;
-  height: 580px;
-  background-image: url("../../images/banner-bg.png");
+  height: 60px;
   background-size: 100%;
   background-repeat: no-repeat;
   width: 100%;
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  /* box-shadow: 0px 0 100px 10px black; */
 }
 
+.container.active {
+  background-color: wheat;
+}
 .container {
-  /* max-width: 1200px; */
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 5rem;
-  height: 80px;
+  height: 60px;
   margin: 0 auto;
-  position: fixed;
-  top: 0;
-  z-index: 999;
+  background-color: transparent;
   & nav {
     & ul {
       & li {
@@ -59,80 +62,34 @@ html {
 .menu {
   display: none;
 }
-.header {
-  position: relative;
-  .carousel_containt {
-    position: relative;
-    top: 40%;
-    left: 0;
-    text-align: center;
-    width: 100%;
-    z-index: 1;
-    .carousel_container {
-      max-width: 1140px;
-      font-size: 1rem;
-      margin: 0 auto;
-
-      .containt {
-        & h1 {
-          font-size: 4.5em;
-          width: 100%;
-          color: #ffffff;
-          text-align: center;
-          text-transform: uppercase;
-          font-weight: bold;
-        }
-        .shop-btn {
-          background-color: #252525;
-          width: 170px;
-          margin: 0 auto;
-          margin-top: 60px;
-          margin-bottom: 60px;
-          height: 30px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          font-size: 1.8rem;
-          & a {
-            background-color: #252525;
-            border-radius: 0.8rem;
-
-            text-transform: capitalize;
-            width: 100%;
-            color: white;
-            padding: 15px 0;
-          }
-        }
-      }
-    }
-  }
-}
 
 @media (max-width: 768px) {
-  .header {
-    background-size: cover;
-    overflow: hidden;
-  }
   .menu {
     display: block;
+    z-index: 999;
   }
   .container {
     z-index: 999;
   }
-
+  .active-nav {
+    display: none;
+  }
   .nav-links {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     text-align: center;
-    background-color: #252525;
+    background-color: orange;
     padding: 2rem 0;
-    height: 100vh;
+    height: 600px;
+    transition: all 0.5;
   }
   .nav-links ul li {
     display: block;
     width: 100%;
     margin-top: 2rem;
+  }
+  .nav-links ul li a {
   }
 }
