--- a/src/components/fashion/fashion.css
+++ b/src/components/fashion/fashion.css
@@ -1,22 +1,16 @@
 .fashion {
-  width: 100%;
+    margin: 2rem 0;
 
   .fashion_container {
-    max-width: 1140px;
+    /* max-width: 1140px; */
     margin: 0 auto;
-    .fashion_title{
-        height: 56px;
-        width: 100%;
-        text-align: center;
-        font-size: 3rem;
-        margin: 3rem 0;
-    }
+   
 
     .fashion_products{
-        display: flex;
+        /* display: flex;
         align-items: center;
         justify-content: center;
-        gap: 2.5rem;
+        gap: 2.5rem; */
         /* margin: 3rem; */
     }
   }
@@ -54,6 +48,8 @@
 
             & a{
                 font-size: 1.5rem;
+                color: black;
+                text-transform: capitalize;
 
             }
         }
