--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,20 +1,38 @@
-.home-container{
-    padding: 5rem 0;
+.home-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
-.home-img{
-    background-image: url('../../images/sports-shoe4 (1).png');
-    width: 100%;
-    height: 600px;
-    background-repeat: no-repeat;
-   background-position: center;
+.home-img {
+  background-image: url("../../images/sports-shoe4 (1).png");
+  width: 100%;
+  height: 600px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .products-collection {
-text-align: center;
-padding: 1rem;
-
+  text-align: center;
+  padding: 1rem;
 }
-.products-collection a{
-    background-color: #f2f4f6;
-    padding: 1rem;
-    border-radius: 2rem;
+.products-collection a {
+  background-color: #f2f4f6;
+  padding: 1rem;
+  border-radius: 2rem;
+}
+.fashion_title {
+  height: 56px;
+  width: 100%;
+  text-align: center;
+  font-size: 3rem;
+  margin: 3rem 0;
+}
+.cloths_Section {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  max-width: 1140px;
+  border: 1px solid;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
