--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,43 +1,42 @@
 .product {
-  flex-basis: 28%;
-  & a{
-color: black;
-  }
-}
-.fashion_cart2 {
-  width: 286px;
-  height: 490px;
+  flex-basis: 30%;
+  font-size: 1.3rem;
+  background-color: white;
   box-shadow: 0px 0 30px 10px #f0f0f0;
 
-  & .product_containt2 {
-    text-align: center;
-    line-height: 2;
-    font-size: 1.3rem;
-    height: 100px;
-    padding: 0.8rem;
+  & a {
+    color: black;
   }
 
-  & .fashion_img2 {
-    text-align: center;
-    margin-top: 3rem;
-  }
-
-  .more_details2 {
+  .product_text_container {
     width: 100%;
-    margin-top: 2rem;
-    .view-btn2 {
-      text-align: center;
-      background-color: yellow;
-      width: 15rem;
-      border-radius: 0.3rem;
-      margin: 0 auto;
-      padding: 1.5rem;
 
-      & a {
-        font-size: 1.5rem;
-        color: black;
-        text-transform: capitalize;
+    .product_text {
+      width: 100%;
+      height: 100px;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    .product_image {
+      width: 100%;
+      height: 250px;
+      padding: 1rem;
+      text-align: center;
+      & img {
+        width: 100%;
+        height: 100%;
       }
     }
   }
+}
+
+@media (max-width: 468px) {
+  .product {
+    width: 100%;
+  }
+  .product_image{
+    width: 100%;
+  }
+ 
 }
