--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -1,12 +1,66 @@
-.cart_section{
-    position: relative;
-    top: 60px;
-    background-color: #f8f6f3;
+.cart_section {
+  width: 100%;
+  padding: 3rem 2rem;
+  position: relative;
+  top: 60px;
+  /* border: 1px solid red; */
+  background-color: #eaeded;
 
+  .cart_container {
+    width: 100%;
+    .cart_box {
+      width: 100%;
+      .cart_header {
+        padding: 1rem;
+        & h1 {
+          font-size: 2.5rem;
+          text-transform: capitalize;
+        }
+      }
 
-    .cart_container{
+      .cart {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        gap: 1rem;
 
-        margin: 2rem;
-        border: 1px solid red;
+        .cart-item {
+          background-color: white;
+
+          flex-basis: 70%;
+          /* background-color: white; */
+        }
+      }
+
+      .grand-total {
+        flex-basis: 30%;
+        background-color: white;
+        height: 300px;
+        padding: 1rem;
+        display: flex;
+        justify-content: space-between;
+        position: sticky;
+        top: 70px;
+        & span {
+          text-transform: capitalize;
+          font-size: 2rem;
+        }
+      }
     }
+  }
+}
+
+@media (max-width: 768px) {
+  .cart {
+    flex-wrap: wrap;
+
+    flex-direction: column;
+    .cart-item {
+      width: 100%;
+    }
+
+    .total {
+      width: 100%;
+    }
+  }
 }
